# slideshow

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  install.sh  package-lock.json  package.json
.github/workflows/: ci.yml
backend/: Cargo.toml
backend/src/: lib.rs  main.rs  slideshow.rs  windows_service.rs
frontend/: Cargo.toml  index.html
frontend/src/: main.rs
frontend/src/static/: main.css
public/: app.js  index.html  style.css
src/: index.ts  slideshow.test.ts  slideshow.ts
xtask/: Cargo.toml
xtask/src/: main.rs
