[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
windows-service = "0.6.0"
rand = "0.9.0"
regex = "1.11.1"
rexiv2 = "0.10.0"
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }

[[bin]]
name = "backend"
path = "src/main.rs"
