[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.9.0"
regex = "1.11.1"
kamadak-exif = "0.6.1"
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
walkdir = "2.5.0"
chrono = "0.4.41"
log = "0.4.20"
env_logger = "0.11.0"

[[bin]]
name = "backend"
path = "src/main.rs"
