[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
gloo-net = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = "1.43.0"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["HtmlInputElement"] }
yew = { version = "0.21.0", features = ["csr"] }
yew-hooks = "0.3.3"
yew-router = "0.18.0"
