[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
duct = "0.13"
cargo_metadata = "0.14"
color-eyre = "0.5"
copy_dir = "0.1"
clap = { version = "4.5.27", features = ["derive"] }
